css/form.css
.form-group {
  margin-bottom: 0;
}

.form-group.row {
  display: flex;
  flex-direction: column;
  margin: 0;
}

.col-xs-12 {
  padding: 0;
}

.col-xs-12.grow-2 {
  flex-grow: 2;
}

.checkbox:last-child {
  margin-bottom: 0;
}

.w-full {
  width: 100%;
  grid-column-end: span 4;
}

.w-1_4 {
  grid-column-end: span 1;
}

.w-1_4.own {
  width: 25%;
  grid-column-end: span 4;
}

.w-1_2 {
  grid-column-end: span 2;
}

.w-1_2.own {
  width: 50%;
  grid-column-end: span 4;
}

.w-3_4 {
  grid-column-end: span 3;
}

.w-3_4.own {
  width: calc(75% - 2px);
  grid-column-end: span 4;
}

.fl-form {
  position: relative;
}

.fl-form .form-html {
  display: grid;
  grid-template-columns: repeat(4, 24%);
  grid-gap: 10px;
  padding: 10px;
}

.fl-form.placeholder .form-html {
  display: block;
}

.fl-form.form-offline button[type="submit"] {
  pointer-events: none;
  opacity: 0.65;
}

.fl-form.form-offline .cover-form {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 5;
  display: flex;
  align-items: center;
  text-align: center;
  padding: 15px;
  pointer-events: all;
  background: rgba(255, 255, 255, 0.85);
}

.fl-form.loading-form .form-html {
  pointer-events: none;
  opacity: 0.2;
}

form.placeholder {
  opacity: 0.5;
  cursor: pointer;
  -webkit-user-select: none !important;
  -ms-user-select: none !important;
  user-select: none !important;
  -webkit-user-modify: read-only !important;
}

form.placeholder .form-group,
form.placeholder button {
  pointer-events: none;
}

.fl-form .label-holder {
  display: block;
  text-align: right;
}

.fl-form .label {
  display: inline-block;
  border: 1px solid #337ab7;
  background-color: rgba(0, 171, 209, 0.55);
  margin: 10px 0;
}

.required-info,
.required-info-label {
  color: #337ab7;
}

.required-info-label {
  margin-bottom: 15px;
}

.fl-form .form-error {
  margin-top: 20px;
}

.fl-form .form-submitting {
  padding: 15px;
  position: absolute;
  width: 80%;
  text-align: center;
  top: 50%;
  left: 50%;
  -webkit-transform: translate3d(-50%, -50%, 0);
  transform: translate3d(-50%, -50%, 0);
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  opacity: 0;
  pointer-events: none;
}

@-webkit-keyframes pulse {
  0%,
  100% {
    opacity: 0.5;
  }

  50% {
    opacity: 1;
  }
}

@keyframes pulse {
  0%,
  100% {
    opacity: 0.5;
  }

  50% {
    opacity: 1;
  }
}

.fl-form.submitting .form-submitting {
  opacity: 1;
  pointer-events: all;
  -webkit-animation: pulse 3s infinite;
  animation: pulse 3s infinite;
}

.fl-form.submitting .form-html {
  opacity: 0.3;
  pointer-events: none;
}

.help-block.description {
  font-size: 85%;
}

/* Buttons */

.btn-primary {
  display: flex !important;
  clear: both;
  width: 100%;
  padding: 10px 16px;
  font-size: 18px;
  line-height: 24px;
  border: none;
  text-align: center;
  cursor: pointer;
  border-radius: 6px;
  align-items: center;
  justify-content: center;
}

.btn-secondary {
  display: block;
  clear: both;
  width: 100%;
  padding: 10px 16px;
  font-size: 18px;
  line-height: 24px;
  border: none;
  border-radius: 6px;
  text-align: center;
  cursor: pointer;
  background-color: #c0c0c0;
  white-space: initial;
}

.btn-primary:focus,
.btn-primary:hover,
.btn-secondary:focus,
.btn-secondary:hover,
.btn:active:focus {
  outline: none;
}

.btn-danger {
  display: block;
  clear: both;
  width: 100%;
  padding: 10px 16px;
  font-size: 18px;
  line-height: 1.33;
  border: none;
  border-radius: 6px;
  text-align: center;
  cursor: pointer;
}

.btn-danger:active,
.btn-danger:active:focus,
.btn-danger:active:hover,
.btn-danger:focus,
.btn-danger:hover {
  color: #fff;
  background-color: #c9302c;
  border-color: #c9302c;
  outline: none;
}

@media (min-width: 640px) {
  .btn-primary,
  .btn-secondary {
    clear: none;
    display: inline-block;
    width: auto;
    max-width: 100%;
  }
}

.btn-link,
a {
  text-decoration: underline;
}

/* FORM STYLES */

.form-group .control-label label {
  margin-bottom: 0;
  padding-top: 5px;
}

.form-control {
  border: 1px solid #ccc;
  border-radius: 4px;
  -webkit-box-shadow: none;
  -webkit-appearance: none;
  box-shadow: none;
  min-height: 44px;
  height: auto;
}

.form-control.has-error {
  border: 1px solid #a94442;
}

.form-control:focus {
  border: 1px solid #337ab7;
  -webkit-box-shadow: none;
  box-shadow: none;
}

textarea.form-control {
  line-height: 20px;
  padding: 15px;
  max-width: 100%;
}

.form-group .input-group {
  padding: 0px;
  position: relative;
  width: 100%;
  overflow: hidden;
}

.input-group-addon {
  position: absolute;
  width: 44px;
  height: 42px;
  top: 1px;
  left: 1px;
  padding: 0;
  font-size: 14px;
  font-weight: 400;
  line-height: 42px;
  color: #555;
  text-align: center;
  background-color: transparent;
  border: none;
  z-index: 4;
  -webkit-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
  pointer-events: none;
}

.input-group-addon:first-child {
  border-right: 1px solid #ccc;
}

.form-group .input-group .form-control {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  padding-left: 57px;
}

.text-helper {
  margin-top: 0.2em;
  font-size: 0.8em;
  display: block;
}

.form-group p {
  margin: 0;
}

.form-control[disabled],
.form-control[readonly] {
  background-color: #efefef;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.form-control[readonly] {
  background-color: #f8f8f8;
}

.form-html .btn {
  margin-bottom: 15px;
}

.form-html .btn:last-child {
  margin-bottom: 0;
}

/* CHECKBOXES */

.checkbox.checkbox-icon:first-of-type {
  margin-top: 0px;
}

.checkbox.checkbox-icon input[type="checkbox"] {
  z-index: -1;
  position: absolute;
  margin: 0;
  width: 28px;
  height: 28px;
  opacity: 0;
  background: black;
  display: block;
}
/* ... */

